--- a/proj/src/app/info/info.component.html
+++ b/proj/src/app/info/info.component.html
@@ -1,1 +1,12 @@
-<p>info works!</p>
+<form>
+  <div class="contacts">
+    <div class="contacts__topline">
+      <div class="contacts__line">
+        <label for="name" >Your name:</label><input id="name" type="text" placeholder="name...">
+      </div>
+      <div class="contacts__line">
+        <label for="email" >Your email:</label><input id="email" type="text" placeholder="email...">
+      </div>
+    </div>
+  </div>
+</form>
