--- a/proj/src/assets/scss/_reset.scss
+++ b/proj/src/assets/scss/_reset.scss
@@ -1,9 +1,21 @@
 * {
   margin: 0;
   padding: 0;
+  *:focus {
+    outline: none;
+  }
 }
 
 body {
   max-width: 1280px;
   margin: auto;
+  color: #5b5b5c;
+}
+
+a {
+  color: #1eaffc;
+  text-decoration: none;
+  &:active {
+  color: #0190dd;
+  }
 }
