--- a/proj/src/assets/scss/_variables.scss
+++ b/proj/src/assets/scss/_variables.scss
@@ -1,3 +1,7 @@
+//text colors
 $text-color: #5b5b5c;
 $second-text-color: #717175;
+$third-text-color: #a3a3a3;
+
+//background colors
 $background: #eee;
