--- a/proj/src/assets/scss/components/_about.scss
+++ b/proj/src/assets/scss/components/_about.scss
@@ -29,7 +29,7 @@
     &-item {
       margin-right: 7px;
       margin-top: 10px;
-      color: #a3a3a3;
+      color: $third-text-color;
       cursor: pointer;
     }
   }
