--- a/proj/src/assets/scss/_variables.scss
+++ b/proj/src/assets/scss/_variables.scss
@@ -5,3 +5,7 @@ $third-text-color: #a3a3a3;
 
 //background colors
 $background: #eee;
+
+//error
+$error: rgb(240, 71, 28);
+$valid: rgb(40, 177, 40)
