--- a/proj/src/assets/scss/components/_info.scss
+++ b/proj/src/assets/scss/components/_info.scss
@@ -8,9 +8,27 @@
     @include block-hover;
   }
   &__line {
-    margin-top: 15px;
+    margin-top: 10px;
     display: flex;
     justify-content: space-between;
+    &--error {
+      width: 100%;
+      height: 12px;
+      font-size: 12px;
+      color: $error;
+      & > p {
+        text-align: right;
+        margin-right: 10px;
+        padding-top: 2px;
+      }
+    }
+    &--aliases > label{
+      display: flex;
+      flex-flow: column nowrap;
+    }
+    & > input::placeholder {
+      color: $second-text-color;
+    }
     & > label {
       width: 20%;
       padding: 5px 10px;
@@ -18,10 +36,8 @@
     & > input {
       width: 79%;
       padding: 5px 10px;
+      margin-right: 10px;
       @include block-border;
-      &::placeholder {
-        color: $second-text-color;
-      }
     }
     &:last-child {
       margin-bottom: 15px;
@@ -32,13 +48,19 @@
     margin-bottom: 30px;
     display: flex;
     justify-content: center;
-    & > button {
-      color: $second-text-color;
-      padding: 5px 15px;
-      @include border;  
-      &:hover {
-        @include block-hover;
-      }
-    }
   }
+}
+
+.form__errors {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: flex-end;
+  margin-right: 10px;
+}
+
+input.ng-valid {
+  border-left: 5px solid $valid;
+}
+input.ng-invalid {
+  border-left: 5px solid $error;
 }
