--- a/proj/src/assets/scss/_reset.scss
+++ b/proj/src/assets/scss/_reset.scss
@@ -10,6 +10,9 @@ body {
   max-width: 1280px;
   margin: auto;
   color: #5b5b5c;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
 }
 
 a {
