--- a/proj/src/assets/scss/_button.scss
+++ b/proj/src/assets/scss/_button.scss
@@ -2,6 +2,7 @@
   color: $second-text-color;
   padding: 5px 15px;
   @include border;  
+  font-size: 14px;
   & + & {
     margin-left: 10px;
   }
