--- a/proj/src/assets/scss/components/_info.scss
+++ b/proj/src/assets/scss/components/_info.scss
@@ -28,6 +28,7 @@
     }
     & > input::placeholder {
       color: $second-text-color;
+      font-size: 12px;
     }
     & > label {
       width: 20%;
@@ -38,6 +39,7 @@
       width: 79%;
       padding: 5px 10px;
       margin-right: 10px;
+      font-size: 12px;
       @include block-border;
     }
     &:last-child {
