--- a/proj/src/app/app.component.html
+++ b/proj/src/app/app.component.html
@@ -1,10 +1,14 @@
-<div class="wrapper">
-  <div class="top__line">
-    <div class="logo" routerLink="/">
-      <svg-icon src="../../assets/logo/icon-logo.svg"></svg-icon>
+<header>
+  <div class="wrapper">
+    <div class="top__line">
+      <div class="logo" routerLink="/">
+        <svg-icon src="../../assets/logo/logo.svg"></svg-icon>
+      </div>
+      <h2>Hello from my heart!</h2>
     </div>
-    <h2>Hello from my heart!</h2>
   </div>
+</header>
+<div class="wrapper">
   <app-menu></app-menu>
   <router-outlet></router-outlet>
 </div>
