--- a/proj/src/assets/scss/components/_header.scss
+++ b/proj/src/assets/scss/components/_header.scss
@@ -1,8 +1,15 @@
 header {
-  height: 37vh;
+  // margin-top: -50px;
+  display: flex;
+  align-items: flex-start;
+  min-height: 230px;
   width: 100%;
   background-image: url("data:image/svg+xml,%3Csvg width='1440' height='197' viewBox='0 0 1440 197' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M527.5 134C330 122 0 194.5 0 194.5V0H1440.5V134C1440.5 134 1267.5 208 1014 194.5C760.5 181 725 146 527.5 134Z' fill='%23FE7B5F'/%3E%3C/svg%3E%0A");
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: contain;
+  background-size: cover;
+  &>.wrapper {
+    display: flex;
+    padding-top: 15px;
+  }
 }
