--- a/proj/src/app/app.component.scss
+++ b/proj/src/app/app.component.scss
@@ -5,12 +5,14 @@
 
 .top__line {
   display: flex;
-  align-items: center;
-  border-bottom: 1px solid #e3e3e3;
+  width: 100%;
+  align-items: flex-start;
+  justify-content: space-between;
+  // border-bottom: 1px solid #e3e3e3;
   margin-bottom: 15px;
 }
 
 .wrapper {
-  max-width: 1280px;
-  margin: auto;
+  width: 1280px;
+  margin: 0 auto;
 }
