--- a/proj/src/assets/scss/components/_about.scss
+++ b/proj/src/assets/scss/components/_about.scss
@@ -1,5 +1,6 @@
 .about {
   display: flex;
+  // flex-wrap: wrap;
   &__title {
     margin-bottom: 10px;
     color: $text-color;
@@ -14,7 +15,7 @@
     background: $background;
     @include block-border;
     padding: 20px;
-    max-width: 20%;
+    max-width: 25%;
     margin-top: 25px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, .1);
     &:hover {
