--- a/proj/src/app/menu/menu.component.html
+++ b/proj/src/app/menu/menu.component.html
@@ -1,3 +1,5 @@
-<a routerLink="my">Home</a>&nbsp;&nbsp;
-<a routerLink="info">Info</a>&nbsp;&nbsp;
-<a routerLink="about">About</a>
+<div class="menu__main">
+  <a routerLink="my">Home</a>&nbsp;&nbsp;
+  <a routerLink="feedback">Feedback</a>&nbsp;&nbsp;
+  <a routerLink="about">About</a>
+</div>
