--- a/proj/src/assets/scss/_reset.scss
+++ b/proj/src/assets/scss/_reset.scss
@@ -6,12 +6,16 @@
     outline: none;
   }
 }
+html {
+  height: 100%;
+}
 
 body {
   color: #5b5b5c;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
+  height: 100%;
 }
 
 a {
@@ -20,4 +24,25 @@ a {
   &:active {
   color: #0190dd;
   }
+}
+.wrapper {
+  width: 70vw;
+  margin: 0 auto;
+}
+
+.content {
+  display: flex;
+  flex-flow: column nowrap;
+  height: 100%;
+}
+
+.header__wrap {
+  flex: 0 0 auto;
+}
+.content__wrap {
+  flex: 1 0 auto;
+  margin-bottom: 100px;
+}
+.footer__wrap {
+  flex: 0 0 auto;
 }
