Верстка футера. добавление material

--- a/proj/src/app/app.component.html
+++ b/proj/src/app/app.component.html
@@ -10,7 +10,7 @@
         </div>
       </div>
     </header>
-      <svg class="header__bg" width="auto" height="auto" viewBox="0 50 1440 197" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <svg class="header__bg" viewBox="0 50 1440 197" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M527.5 134C330 122 0 194.5 0 194.5V0H1440.5V134C1440.5 134 1267.5 208 1014 194.5C760.5 181 725 146 527.5 134Z" fill="#FE7B5F"/>
       </svg>
   </div>
@@ -23,8 +23,34 @@
   </div>
 
   <div class="footer__wrap">
-    <footer>
-  
+    <footer class="footer">
+      <div class="wrapper">
+        <div class="footer__top">
+          <div class="footer__links">
+            <a class="footer__link" href="">Главная</a>
+            <a class="footer__link" href="">Услуги</a>
+            <a class="footer__link" href="">Контакты</a>
+          </div>
+          <div class="footer__button">
+            <button class="btn--main" mat-button mat-raised-button primary>
+              Записаться на прием
+            </button>
+          </div>
+          <div class="footer__call">
+            <p>Позвонить:</p>
+            <a class="footer__link" href="telTo:+79787022123">+7 (978) 702-21-23</a>
+          </div>
+        </div>
+        <div class="footer__middle">
+          <div class="footer__social">
+            <a class="footer__link" href="">VK</a>
+            <a class="footer__link" href="">INST</a>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <p class="footer__copy">Все права защищены 2019 г. <span>&copy;</span></p>
+        </div>
+      </div>
     </footer>
   </div>
 </div>
