--- a/proj/src/assets/scss/_variables.scss
+++ b/proj/src/assets/scss/_variables.scss
@@ -2,10 +2,11 @@
 $text-color: #5b5b5c;
 $second-text-color: #717175;
 $third-text-color: #a3a3a3;
+$white: #fff;
 
 //background colors
 $background: #eee;
 
 //error
-$error: rgb(240, 71, 28);
-$valid: rgb(40, 177, 40)
+$error: #FE7B5F;
+$valid: #56EA3E;
