перевод на in-memory-web-api

--- a/proj/src/app/my/my.component.html
+++ b/proj/src/app/my/my.component.html
@@ -1,8 +1,1 @@
-<p>my works!</p>
-<mat-form-field>
-  <input matInput
-         [matDatepicker]="picker" 
-         placeholder="Choose a date">
-  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-datepicker #picker></mat-datepicker>
-</mat-form-field>
+<app-select-button></app-select-button>
