--- a/proj/src/app/app.component.html
+++ b/proj/src/app/app.component.html
@@ -4,7 +4,7 @@
       <div class="wrapper">
         <div class="header__top">
           <div class="header__logo" routerLink="/">
-            <svg-icon src="../../assets/logo/logo.svg"></svg-icon>
+            <svg-icon src="./../assets/logo/logo.svg"></svg-icon>
           </div>
           <h2 class="header__title" >Hello from my heart!</h2>
         </div>
