--- a/proj/src/app/about/about.component.html
+++ b/proj/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<section class="about">
+<!-- <section class="about">
   <div class="about__item" *ngFor="let article of articles">
     <h3 class="about__title"> {{ article.title }} </h3>
     <p class="about__description"> {{ article.description }} </p>
@@ -6,4 +6,25 @@
       <span class="about__tags-item" *ngFor="let tag of article.tags" (click)="sortByTags($event)"> {{ tag }} </span>
     </div>
   </div>
+</section> -->
+
+<section>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th scope="col-1">id</th>
+        <th scope="col-1">Title</th>
+        <th scope="col-8">Description</th>
+        <th scope="col-2">Tags</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let article of articles">
+        <th scope="row">{{ article.id }}</th>
+        <td>{{ article.title }}</td>
+        <td>{{ article.description }}</td>
+        <td>{{ article.tags }}</td>
+      </tr>
+    </tbody>
+  </table>
 </section>
