--- a/proj/src/assets/scss/_base.scss
+++ b/proj/src/assets/scss/_base.scss
@@ -11,3 +11,5 @@
 @import './components/header';
 @import './components/footer';
 
+// bootstrap
+@import './../../../node_modules/bootstrap/scss/bootstrap.scss';
