правки по tslint

--- a/proj/src/app/info/info.component.html
+++ b/proj/src/app/info/info.component.html
@@ -1,78 +1,54 @@
-<form [formGroup]="infoForm"
-      (ngSubmit)="onSubmit($event)">
+<form [formGroup]="infoForm" (ngSubmit)="onSubmit($event)">
   <div class="contacts">
     <div class="contacts__topline">
       <div class="contacts__line">
         <label for="name">Your name:</label>
-        <input id="name" 
-               type="text" 
-               placeholder="name..."
-               formControlName="name"
-               required>
+        <input id="name" type="text" placeholder="name..." formControlName="name" required>
       </div>
       <div class="contacts__line--error">
         <div class="form__errors" *ngIf="name.invalid && (name.dirty || name.touched)">
-          <p *ngIf="name.errors.minlength">Имя должно быть длиннее 4-х символов</p>
-          <p *ngIf="name.errors.required">Поле обязательно к заполнению</p>
+          <p *ngIf="name.hasError('minLength')">Имя должно быть длиннее 4-х символов</p>
+          <p *ngIf="name.hasError('required')">Поле обязательно к заполнению</p>
         </div>
       </div>
       <div class="contacts__line">
         <label for="email">Your email:</label>
-        <input id="email" 
-               type="text" 
-               placeholder="email..."
-               formControlName="email"
-               required>
+        <input id="email" type="text" placeholder="email..." formControlName="email" required>
       </div>
       <div class="contacts__line--error">
         <div class="form__errors" *ngIf="email.invalid && (email.dirty || email.touched)">
-            <p *ngIf="email.errors.email">Введите корректный email</p>
-            <p *ngIf="email.errors.required">Поле обязательно к заполнению</p>
-          </div>
+          <p *ngIf="email.hasError('email')">Введите корректный email</p>
+          <p *ngIf="email.hasError('required')">Поле обязательно к заполнению</p>
+        </div>
       </div>
       <div formGroupName="address">
         <div class="contacts__line">
           <label for="index">Your index:</label>
-          <input id="index" 
-                 type="text" 
-                 placeholder="index..."
-                 formControlName="index">
+          <input id="index" type="text" placeholder="index..." formControlName="index">
         </div>
         <div class="contacts__line--error">
-            <div class="form__errors" *ngIf="index.invalid && (index.dirty || index.touched)">
-                <p *ngIf="index.errors.pattern">Введите корректный индекс</p>
-                <p *ngIf="index.errors.required">Поле обязательно к заполнению</p>
-              </div>
+          <div class="form__errors" *ngIf="index.invalid && (index.dirty || index.touched)">
+            <p *ngIf="index.hasError('pattern')">Введите корректный индекс</p>
+            <p *ngIf="index.hasError('required')">Поле обязательно к заполнению</p>
           </div>
+        </div>
         <div class="contacts__line">
           <label for="street">Your street:</label>
-          <input id="street" 
-                 type="text" 
-                 placeholder="street..."
-                 formControlName="street">
+          <input id="street" type="text" placeholder="street..." formControlName="street">
         </div>
         <div class="contacts__line">
           <label for="city">Your city:</label>
-          <input id="city" 
-                 type="text" 
-                 placeholder="city..."
-                 formControlName="city">
+          <input id="city" type="text" placeholder="city..." formControlName="city">
         </div>
         <div class="contacts__line">
           <label for="country">Your country:</label>
-          <input id="country" 
-                 type="text" 
-                 placeholder="country..."
-                 formControlName="country">
+          <input id="country" type="text" placeholder="country..." formControlName="country">
         </div>
       </div>
     </div>
     <div class="contacts__bottomline">
-      <a class="btn" 
-              (click)="updateValue()">Update</a>
-      <button class="btn"
-              type="submit"
-              [disabled]="!infoForm.valid">Submit</button>
+      <a class="btn" (click)="updateValue()">Update</a>
+      <button class="btn" type="submit" [disabled]="!infoForm.valid">Submit</button>
     </div>
   </div>
 </form>
