--- a/proj/src/app/about/about.component.html
+++ b/proj/src/app/about/about.component.html
@@ -12,10 +12,10 @@
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
-        <th scope="col-1">id</th>
-        <th scope="col-1">Title</th>
-        <th scope="col-8">Description</th>
-        <th scope="col-2">Tags</th>
+        <th scope="col">id</th>
+        <th scope="col">Title</th>
+        <th scope="col">Description</th>
+        <th scope="col">Tags</th>
       </tr>
     </thead>
     <tbody>
@@ -23,7 +23,7 @@
         <th scope="row">{{ article.id }}</th>
         <td>{{ article.title }}</td>
         <td>{{ article.description }}</td>
-        <td>{{ article.tags }}</td>
+        <td><span *ngFor="let tag of article.tags">{{ tag | uppercase }} </span></td>
       </tr>
     </tbody>
   </table>
