--- a/proj/src/app/menu/menu.component.html
+++ b/proj/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="menu__main">
-  <a routerLink="my">Home</a>&nbsp;&nbsp;
-  <a routerLink="feedback">Feedback</a>&nbsp;&nbsp;
-  <a routerLink="about">About</a>
+  <a routerLink="my" appBold >Home</a>&nbsp;&nbsp;
+  <a routerLink="feedback" appBold >Feedback</a>&nbsp;&nbsp;
+  <a routerLink="about" appBold >About</a>
 </div>
