--- a/proj/src/app/menu/menu.component.html
+++ b/proj/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="menu__main">
-  <a routerLink="my" appBold >Home</a>&nbsp;&nbsp;
-  <a routerLink="feedback" appBold >Feedback</a>&nbsp;&nbsp;
-  <a routerLink="about" appBold >About</a>
+  <a routerLink="my" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Home</a>&nbsp;&nbsp;
+  <a routerLink="feedback" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Feedback</a>&nbsp;&nbsp;
+  <a routerLink="about" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">About</a>
 </div>
