--- a/proj/src/app/my/my.component.html
+++ b/proj/src/app/my/my.component.html
@@ -1,7 +1,7 @@
 <!-- <app-select-button></app-select-button> -->
 <ng-container [formGroup]="form">
   <mat-form-field>
-    <input matInput placeholder="Введите сумму" formControlName="sum">
+    <input matInput appFormatNumber [control]="sum" placeholder="Введите сумму" formControlName="sum">
     <mat-error *ngIf="sum.hasError('required')">
       Введите число
     </mat-error>
