--- a/proj/src/assets/scss/components/_footer.scss
+++ b/proj/src/assets/scss/components/_footer.scss
@@ -5,6 +5,8 @@ background-image: url("data:image/svg+xml,%3Csvg width='640' height='290' viewBo
 }
 
 .footer>.wrapper {
+  display: flex;
+  flex-wrap: wrap;
   position: relative;
   top: 140px;
 }
@@ -12,6 +14,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='640' height='290' viewBo
 .footer {
   color: $white;
   @include text-shadow;
+
   &__link {
     color: $white;
     &:hover {
@@ -26,7 +29,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='640' height='290' viewBo
     margin-bottom: 15px;
     & > div {
       display: flex;
-      flex: 0 0 320px;
+      // flex: 0 0 320px;
       justify-content: center;
     }
   }
