начало работы с новой формой

--- a/proj/src/app/menu/menu.component.html
+++ b/proj/src/app/menu/menu.component.html
@@ -1,5 +1,6 @@
 <div class="menu__main">
   <a routerLink="my" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Home</a>&nbsp;&nbsp;
   <a routerLink="feedback" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Feedback</a>&nbsp;&nbsp;
-  <a routerLink="about" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">About</a>
+  <a routerLink="about" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">About</a>&nbsp;&nbsp;
+  <a routerLink="form" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Form</a>
 </div>
