--- a/proj/src/app/menu/menu.component.html
+++ b/proj/src/app/menu/menu.component.html
@@ -2,5 +2,6 @@
   <a routerLink="my" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Home</a>&nbsp;&nbsp;
   <a routerLink="feedback" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Feedback</a>&nbsp;&nbsp;
   <a routerLink="about" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">About</a>&nbsp;&nbsp;
-  <a routerLink="form" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Form</a>
+  <a routerLink="form" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Form</a>&nbsp;&nbsp;
+  <a routerLink="posts" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Posts</a>
 </div>
