--- a/proj/src/app/posts/post-create/post-create.component.html
+++ b/proj/src/app/posts/post-create/post-create.component.html
@@ -10,7 +10,7 @@
 			#title
 		/>
 	</div>
-	<div class="form-group">
+	<div class="form-group" >
 		<input
 			type="text"
 			name=""
@@ -22,12 +22,8 @@
 		/>
 	</div>
 	<div class="form-group">
-		<button class="btn btn-primary" (click)="createPost()">Add Post</button>
-		<button class="btn btn-warning" (click)="focusOnTitle()">
-			Focus On Title
-		</button>
-		<button class="btn btn-warning" (click)="focusOnText()">
-			Focus On Text
-		</button>
+		<button class="btn btn-primary" (click)="createPost()" >Add Post</button>
+		<button class="btn btn-warning" (click)="focusOnTitle()" >Focus On Title</button>
+		<button appHoverDirective class="btn btn-warning" (click)="focusOnText()" >Focus On Text</button>
 	</div>
 </div>
