--- a/proj/src/app/menu/menu.component.html
+++ b/proj/src/app/menu/menu.component.html
@@ -3,5 +3,6 @@
   <a routerLink="feedback" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Feedback</a>&nbsp;&nbsp;
   <a routerLink="about" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">About</a>&nbsp;&nbsp;
   <a routerLink="form" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Form</a>&nbsp;&nbsp;
-  <a routerLink="posts" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Posts</a>
+  <a routerLink="posts" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Posts</a>&nbsp;&nbsp;
+  <a routerLink="dir" appBold [selectedSize]="'1.05rem'" [defaultSize]="'1rem'"  [routerLinkActive]="'active'">Directives</a>&nbsp;&nbsp;
 </div>
