--- a/proj/src/app/directives/directives.component.scss
+++ b/proj/src/app/directives/directives.component.scss
@@ -1,5 +1,14 @@
 .cat {
-  background: url(./../../assets/img/cat.jpeg);
+  background: url(./../../assets/img/cat.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  display: block;
+  width: 320px;
+  height: 240px;
+}
+
+.dog {
+  background: url(./../../assets/img/dog.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   display: block;
@@ -11,5 +20,10 @@
   width: 320px;
   height: 240px;
   background-color: #fff;
-  opacity: .77;
+}
+
+.img {
+  display: block;
+  width: 64px;
+  height: 48px;
 }
